first 2 lectures drafted

--- a/10718_s2026/index.html
+++ b/10718_s2026/index.html
@@ -15,32 +15,47 @@
 <ul>
 <li>Instructor: William Cohen (wcohen@cmu.edu)
 <li>Times: Tue-Thus 3:30-4:50pm
-<li>Other resources:
+<li>Resources:
   <ul>
     <li><a href="schedule.html">Schedule of meetings</a>
-    <li>Sample datasets for project: <a href="https://docs.google.com/document/d/1toAm2vrolMIanQYq5KaKN_x5q6eVLFhhCInaBx1RYwQ/edit?tab=t.0">list 1</a>, TODO
+    <li>Shared <a href="https://drive.google.com/drive/folders/1bzlOncnA87_yNk16tDi8k_uhbe_ht-Gf">GDrive</a> for class
+    <li><a href="https://docs.google.com/document/d/1toAm2vrolMIanQYq5KaKN_x5q6eVLFhhCInaBx1RYwQ/edit?tab=t.0">Sample datasets for project</a>
     <li>Piazza: TODO
     <li>Gradescope: TODO
     <li>Signup sheet for presentations/discussions: TODO
   </ul>
+<li>Prior versions of this course:
+  <ul>
+    <li>Dr. Ghani <a href="https://github.com/dssg/MLinPractice">Fall 2025</a>
+    <li>Dr. Smith <a href="https://drive.google.com/drive/folders/1tAvlUV8zuc63yK3H1aw6-jQDMCkQIpkI">Spring 2025</a>
+    <li>Dr. Wilder <a href="https://github.com/bwilder0/10718_f2024?tab=readme-ov-file">Fall 2024</a>
+   </ul>
 </ul>
 
 <h2>Overview</h2>
-<p>This is a project-based course designed to provide students training
-  and experience in solving real-world problems using machine learning,
-  exploring the interface between research and practice. The goal of
-  this course is to give students exposure to the nuance of applying
-  machine learning to the real-world, where common assumptions (like iid
-  and stationarity) break down. Students will learn how to formulate
-  real-world business or policy scenarios as machine learning problems,
-  how to address common challenges which arise in applying ML to such
-  problems (e.g., distribution shift or missingness), and how to
-  rigorously evaluate the results of such interventions in practice. We
-  will place an emphasis throughout on issues related to ethics and
-  fairness in machine learning, and discuss how choices throughout the
-  machine learning pipeline – including problem formulation, outcome
-  definition, data collection, and model training – contribute to the
-  social impact of algorithmic systems.
+<p>This is a project- and discuss-based course designed to provide
+  students training and experience in solving real-world problems
+  using machine learning, exploring the interface between research and
+  practice. The goal of this course is to give students exposure to
+  the nuance of applying machine learning to the real-world, where
+  common assumptions (like iid and stationarity) break down. Students
+  will learn how to formulate real-world business or policy scenarios
+  as machine learning problems, how to address common challenges which
+  arise in applying ML to such problems (e.g., distribution shift or
+  missingness), how to rigorously evaluate the results of such
+  interventions in practice; and how to present such empirical results
+  orally and in writing.  We will place an emphasis throughout on
+  issues related to ethics and fairness in machine learning, and
+  discuss how choices throughout the machine learning pipeline –
+  including problem formulation, outcome definition, data collection,
+  and model training – contribute to the social impact of algorithmic
+  systems.
+</p>
+
+<p>After completing the course, students should be able to
+design and evaluate novel combinations of learning algorithms;
+take real-world questions involving data and evaluate and/or develop appropriate methods to answer these questions;
+and present technical material clearly, in spoken and written form.
 </p>
 
 <h2>Prerequisites</h2>
@@ -114,11 +129,11 @@ references that may be helpful are:
 <p>
 Students will complete a semester-long course project that explores
 the application of machine learning to a problem of practical
-interest. Students may work in groups of up to three people. Each
+interest. Students may work in groups of two or three people. Each
 group will select a dataset, which _cannot_ be one commonly used in
 machine learning research. Over a series of assignments, each group
 will define a problem to be addressed using the dataset, clean and
-explore it, develop baselines and machine learning models, and explore
+explore the data, develop baselines and machine learning models, and explore
 the impact of additional desiderata on their pipeline (e.g., fairness,
 privacy, interpretability, or model efficiency). Students can either
 select their own dataset for the project (which cannot be a commonly
@@ -151,6 +166,152 @@ The project is 60%, graded out of 100 points
 <li> Final presentation: 15 points
 </ul>
 
+
+<h2>Other policies</h2>
+
+<h4>Regrade requests</h4> If you believe an error was made during grading,
+please open a regrade request in Gradescope. For each assignment,
+regrade requests will be open for only 2 weeks after the grades have
+been published. This is to encourage you to check the feedback you’ve
+received early!
+</p>
+
+<h4>Late homeworks</h4>You have 4 total grace days that can be used to submit late homework assignments without penalty. We will automatically keep a tally of these grace days for you; they will be applied greedily. You may not use more than 2 grace days on any single homework assignment. Additionally, please note:
+
+<ul>
+<li>All homework submissions are electronic, and lateness will be determined by the latest timestamp of any part of your submission. 
+<li>Once you have exhuasted your late days any submission up to 24 hours late will recieve a 50% penalty. Any work submitted after 24 hours will be graded but will not be eligible for any credit.
+</ul>
+
+<strong>No late days can be applied to the discussion
+assignments</strong> (presenter or non-presenter). If you sign up for
+a presenter role and find that you will miss class, you must either
+(a) find someone to swap presentation slots with or (b) create the
+presentation and find another student to present it for you.
+</p>
+
+<p>
+<h4>Extensions</h4>
+In general, we do not grant extensions on assignments. There are several exceptions:
+<ul>
+<li>
+Medical Emergencies: If you are sick and unable to complete an assignment or attend class, please go to University Health Services. For minor illnesses, we expect grace days or our late penalties to provide sufficient accommodation. For medical emergencies (e.g. prolonged hospitalization), students may request an extension afterwards and should include a note from University Health Services.
+<li>
+Family/Personal Emergencies: If you have a family emergency (e.g. death in the family) or a personal emergency (e.g. mental health crisis), please contact your academic adviser or Counseling and Psychological Services (CaPS). In addition to offering support, they will reach out to the instructors for all your courses on your behalf to request an extension.
+<li>
+University-Approved Absences: If you are attending an out-of-town university approved event (e.g. multi-day athletic/academic trip organized by the university), you may request an extension for the duration of the trip. You must provide confirmation of your attendance, usually from a faculty or staff organizer of the event.
+</ul>
+For any of the above situations, you may request an extension by emailing your instructor. The email should be sent as soon as you are aware of the conflict and at least 5 days prior to the deadline. In the case of an emergency, no notice is needed.
+</p>
+
+		<h4>Audit Policy</h4>
+		Official auditing of the course (i.e. taking the course for an “Audit” grade) is not permitted this semester.<br /> <br />Unofficial auditing of the course (i.e. watching the lectures online or attending them in person) is welcome and permitted without prior approval. Unofficial auditors will not be given access to course materials such as homework assignments and exams.
+
+		<h4>Pass/Fail Policy</h4>
+		Pass/Fail is not allowed in this class.
+
+		<h4>Accommodations for Students with
+		Disabilities </h4> If you have a disability and have
+		an accommodations letter from the Disability Resources
+		office, I encourage you to discuss your accommodations
+		and needs with the instructor as early in the semester
+		as possible. I will work with you to ensure that
+		accommodations are provided as appropriate. If you
+		suspect that you may have a disability and would
+		benefit from accommodations but are not yet registered
+		with the Office of Disability Resources, I encourage
+		you to contact them at <a href=
+		"mailto:access@andrew.cmu.edu">access@andrew.cmu.edu</a>.
+		
+		<h3>Academic Integrity Policies</h3>
+		<b>Read this Carefully</b>
+		<h4>Collaboration among Students</h4>
+		<ul>
+
+		<li><strong>Group project:</strong> Students are
+		expected to collaborate with their groupmates on the
+		  project and implementation, and this collaboration
+		  need not be reported: it is assumed.
+
+		<li><strong>Collaborations outside the group
+		  project:</strong> Studying the material in groups is
+		  encouraged. It is also allowed to seek help from
+		  other students in understanding the material needed
+		  to solve a particular homework problem, provided no
+		  written notes (including code) are shared, or are
+		  taken at that time, and provided learning is
+		  facilitated, not circumvented. The actual solution
+		  must be done by each student alone.</li>
+
+		<li>The presence or absence of any form of help or
+		collaboration, whether given or received, must be
+		explicitly stated and disclosed in full by all
+		involved. Specifically, each assignment solution must
+		include a collaboration section.
+
+		<li>If you gave help after turning in your own
+		assignment and/or after answering the collaboration
+		section, you must update your answers before the
+		assignment’s deadline, if necessary by emailing the
+		course staff or a Piazza post.</li>
+
+		<li>Collaboration without full disclosure will be
+		handled severely, in compliance with CMU’s Policy
+		on <a href=
+		"https://www.cmu.edu/policies/student-and-student-life/academic-integrity.html"
+		target = "_blank">Academic Integrity.</a>
+
+		  All violations (even first one) of course policies
+		  will always be reported to the university
+		  authorities (your Department Head, Associate Dean,
+		  Dean of Student Affairs, etc.) as an official
+		  Academic Integrity Violation and will carry severe
+		  penalties. The penalty which will be recommended by
+		  the Professor for violation of the academic
+		  integrity policy is failure in the course. For
+		  repeat offenders, violoation of academic integrity
+		  policies can even lead to dismissal from the
+		  university.
+		</li>
+
+		<li>While students are encouraged to use generative AI
+		  tools as resources or as collaborators on a course
+		  project, <strong>use of generative AI to produce any
+		  part of an assignment (project or presentation)
+		  should be documented in the collaboration
+		  section.</strong> 
+
+		<li>At the instructor's discretion, any assignments or
+		  presentations may also be <strong>supplemented with
+		  an oral quiz</strong> in a small group, or
+		  one-on-one with the instructor.  One reason for
+		  doing this to verify that generative AI has not be
+		  over-used, i.e., used to the extent that a student
+		  does not fully understand some material that he/she
+		  has presented or turned in.
+
+		<li>
+		  Students are responsible for proactively protecting
+		  their work from copying and misuse by other
+		  students. If a student’s work is copied by another
+		  student, the original author is also considered to
+		  be at fault and in violation of the course
+		  policies. 
+		</ul>
+		
+		<h4>Previously used assignments</h4>Some of the
+		assignments used in this class may have been used in
+		prior versions of this class, or in classes at other
+		institutions, or elsewhere. Solutions to them may be,
+		or may have been, available online, or from other
+		people or sources. It is explicitly forbidden to use
+		any such sources, or to consult people who have solved
+		these problems before. It is explicitly forbidden to
+		search for these problems or their solutions on the
+		internet. Only collaboration with other students who are
+		currently taking the class is allowed, and only under
+		the conditions stated above.
+		
 
 </section></main></body></html>
 
