--- a/10718_s2026/schedule.html
+++ b/10718_s2026/schedule.html
@@ -26,7 +26,7 @@
                     <tr>
                         <td>Tues Jan 13, 2026</td>
                         <td><strong class="label label-pink">Lecture</strong></td>
-                        <td>Intro and Overview    </td>
+                        <td>Intro and Overview <a href="https://docs.google.com/presentation/d/1KbAJiSjIyrG37v42gRBrpCmGObkyi4byqxh-0T5Dtik/edit?slide=id.g1ef2a953916_0_349#slide=id.g1ef2a953916_0_349"> [Slides]</a>   </td>
                         <td>
                           <ul>
                           </ul>
@@ -38,7 +38,7 @@
                     <tr>
                         <td>Thurs Jan 15, 2026</td>
                         <td><strong class="label label-pink">Lecture</strong></td>
-                        <td>ML Project Scoping    </td>
+                        <td>ML Project Deep Dive    </td>
                         <td>
                           <ul>
                           </ul>
