data analysis examples

--- a/10718_s2026/schedule.html
+++ b/10718_s2026/schedule.html
@@ -38,7 +38,7 @@
                     <tr>
                         <td>Thurs Jan 15, 2026</td>
                         <td><strong class="label label-pink">Lecture</strong></td>
-                        <td>ML Project Deep Dive    </td>
+                        <td>ML Project Deep Dive <a href="https://docs.google.com/presentation/d/1LC3IozgVzUCvQIxFFQbhQDfyGmYoqOUr5LHLgMVEia4/edit?usp=drive_link"> [Slides]</a>   </td>
                         <td>
                           <ul>
                           </ul>
@@ -50,7 +50,7 @@
                     <tr>
                         <td>Tues Jan 20, 2026</td>
                         <td><strong class="label label-pink">Lecture</strong></td>
-                        <td>State of ML    </td>
+                        <td>Data Preparation    </td>
                         <td>
                           <ul>
                           </ul>
