another lecture; better schedule

--- a/10718_s2026/schedule_head.html
+++ b/10718_s2026/schedule_head.html
@@ -15,11 +15,12 @@
         <table class="table table-bordered table-hover" table-layout: "auto;">
           <tbody>
             <tr>
-              <th>Date</th>
-              <th>Class Type</th>
-              <th>Topic</th>
-              <th>Resources</th>
-              <th>Announcements</th>
+              <th width=5%>Week</th>
+              <th width=10%>Date</th>
+              <th width=5%>Class Type</th>
+              <th width=25%>Topic</th>
+              <th width=25%>Resources</th>
+              <th width=25%>Announcements</th>
             </tr>
 
 
