--- a/10718_s2026/schedule.html
+++ b/10718_s2026/schedule.html
@@ -15,16 +15,18 @@
         <table class="table table-bordered table-hover" table-layout: "auto;">
           <tbody>
             <tr>
-              <th>Date</th>
-              <th>Class Type</th>
-              <th>Topic</th>
-              <th>Resources</th>
-              <th>Announcements</th>
+              <th width=5%>Week</th>
+              <th width=10%>Date</th>
+              <th width=5%>Class Type</th>
+              <th width=25%>Topic</th>
+              <th width=25%>Resources</th>
+              <th width=25%>Announcements</th>
             </tr>
 
 
                     <tr>
-                        <td>Tue  Jan 13 2026</td>
+                        <td>1</td>
+                        <td>Tue  Jan 13</td>
                         <td>lecture</td>
                         <td>Intro and Overview - History, Motivation, Logistics <a href="https://docs.google.com/presentation/d/1KbAJiSjIyrG37v42gRBrpCmGObkyi4byqxh-0T5Dtik/edit?slide=id.g1ef2a953916_0_349#slide=id.g1ef2a953916_0_349"> [Slides]</a></td>
                         <td>
@@ -35,12 +37,14 @@
                           </ul>
                           </details>
                         </td>
-                        <td></td>
+                        <td>
+                        </td>
                     </tr>
                     <tr>
                     </tr>
                     <tr>
-                        <td>Thu  Jan 15 2026</td>
+                        <td>1</td>
+                        <td>Thu  Jan 15</td>
                         <td>lecture</td>
                         <td>ML Project Deep Dive - Project definition and scoping <a href="https://docs.google.com/presentation/d/1LC3IozgVzUCvQIxFFQbhQDfyGmYoqOUr5LHLgMVEia4/edit?usp=drive_link"> [Slides]</a></td>
                         <td>
@@ -51,287 +55,362 @@
                           </ul>
                           </details>
                         </td>
-                        <td></td>
+                        <td>
+                        <details><summary style="color:SteelBlue;text-decoration: underline;">Required Readings</strong></summary>
+                          <ul>
+                          <li><a href="https://hdsr.mitpress.mit.edu/pub/wot7mkc1/release/10">Artificial Intelligence—The Revolution Hasn’t Happened Yet</a>
+                          <li><a href="http://www.incompleteideas.net/IncIdeas/BitterLesson.html?ref=blog.heim.xyz">The bitter lesson</a>
+                          <li><a href="https://arxiv.org/abs/1906.01998">The secrets of machine learning</a>
+                          </ul>
+                          </details>
+                        </td>
                     </tr>
                     <tr>
                     </tr>
                     <tr>
-                        <td>Tue  Jan 20 2026</td>
+                        <td>2</td>
+                        <td>Tue  Jan 20</td>
                         <td>lecture</td>
                         <td>Data Preparation - Scraping, Data Integration, Visualization <a href="https://docs.google.com/presentation/d/1P7V8NkByqKaGoInIJu0AWeMYvVojjrxQHRt5OqJe1Tc/edit?slide=id.g2b4449ee465_1_99#slide=id.g2b4449ee465_1_99"> [Slides]</a></td>
                         <td>
                         </td>
-                        <td></td>
+                        <td>
+                        </td>
                     </tr>
                     <tr>
                     </tr>
                     <tr>
-                        <td>Thu  Jan 22 2026</td>
+                        <td>2</td>
+                        <td>Thu  Jan 22</td>
                         <td>lecture</td>
                         <td>Problem Formulation - How ML maps to real world problems <a href="https://docs.google.com/presentation/d/1P1LFU_uE9gKWi2Z1rcT2MiyhagnJPMzXaDdcI9IWYBc/edit?slide=id.g1ef2a953916_0_122#slide=id.g1ef2a953916_0_122"> [Slides]</a></td>
                         <td>
                         </td>
-                        <td></td>
+                        <td>
+                        <details><summary style="color:SteelBlue;text-decoration: underline;">Required Readings</strong></summary>
+                          <ul>
+                          <li><a href="https://www.science.org/doi/10.1126/science.aax2342">Dissecting Racial Bias in an Algorithm Used to Manage the Health of Populations</a>
+                          </ul>
+                          </details>
+                        </td>
                     </tr>
                     <tr>
                     </tr>
                     <tr>
-                        <td>Tue  Jan 27 2026</td>
+                        <td>3</td>
+                        <td>Tue  Jan 27</td>
                         <td>lecture</td>
-                        <td>Data & Feature Engineering </td>
+                        <td>Data & Feature Engineering <a href="https://docs.google.com/presentation/d/1Vd8XvtCcjdV94dBycBEJ4GKih2grqKGHTx-gl6ZjKYA/edit?slide=id.g333bd8d1b57_0_2#slide=id.g333bd8d1b57_0_2"> [Slides]</a></td>
                         <td>
                         </td>
-                        <td></td>
+                        <td>
+                        <details><summary style="color:SteelBlue;text-decoration: underline;">Required Readings</strong></summary>
+                          <ul>
+                          <li><a href="https://arxiv.org/abs/2103.14749">Pervasive Label Errors in Test Sets Destabilize Machine Learning Benchmarks</a>
+                          <li><a href="https://arxiv.org/abs/2205.09911">Can Foundation Models Wrangle Your Data?</a>
+                          </ul>
+                          </details>
+                        </td>
                     </tr>
                     <tr>
                     </tr>
                     <tr>
-                        <td>Thu  Jan 29 2026</td>
+                        <td>3</td>
+                        <td>Thu  Jan 29</td>
                         <td>lecture</td>
                         <td>Model Selection </td>
                         <td>
                         </td>
-                        <td></td>
+                        <td>
+                        </td>
                     </tr>
                     <tr>
                     </tr>
                     <tr>
-                        <td>Tue  Feb  3 2026</td>
+                        <td>4</td>
+                        <td>Tue  Feb  3</td>
                         <td>lecture</td>
                         <td>Project Checkins </td>
                         <td>
                         </td>
-                        <td></td>
+                        <td>
+                        </td>
                     </tr>
                     <tr>
                     </tr>
                     <tr>
-                        <td>Thu  Feb  5 2026</td>
+                        <td>4</td>
+                        <td>Thu  Feb  5</td>
                         <td>lecture</td>
                         <td>Hyperparam Tuning </td>
                         <td>
                         </td>
-                        <td></td>
+                        <td>
+                        </td>
                     </tr>
                     <tr>
                     </tr>
                     <tr>
-                        <td>Tue  Feb 10 2026</td>
+                        <td>5</td>
+                        <td>Tue  Feb 10</td>
                         <td>lecture</td>
                         <td>Distribution Shift 1 </td>
                         <td>
                         </td>
-                        <td></td>
+                        <td>
+                        </td>
                     </tr>
                     <tr>
                     </tr>
                     <tr>
-                        <td>Thu  Feb 12 2026</td>
+                        <td>5</td>
+                        <td>Thu  Feb 12</td>
                         <td>lecture</td>
                         <td>Distribution Shift 2 </td>
                         <td>
                         </td>
-                        <td></td>
+                        <td>
+                        </td>
                     </tr>
                     <tr>
                     </tr>
                     <tr>
-                        <td>Tue  Feb 17 2026</td>
+                        <td>6</td>
+                        <td>Tue  Feb 17</td>
                         <td>lecture</td>
                         <td>Privacy </td>
                         <td>
                         </td>
-                        <td></td>
+                        <td>
+                        </td>
                     </tr>
                     <tr>
                     </tr>
                     <tr>
-                        <td>Thu  Feb 19 2026</td>
+                        <td>6</td>
+                        <td>Thu  Feb 19</td>
                         <td>lecture</td>
                         <td>Project Pitches </td>
                         <td>
                         </td>
-                        <td></td>
+                        <td>
+                        </td>
                     </tr>
                     <tr>
                     </tr>
                     <tr>
-                        <td>Tue  Feb 24 2026</td>
+                        <td>7</td>
+                        <td>Tue  Feb 24</td>
                         <td>lecture</td>
                         <td>Project Pitches </td>
                         <td>
                         </td>
-                        <td></td>
+                        <td>
+                        </td>
                     </tr>
                     <tr>
                     </tr>
                     <tr>
-                        <td>Thu  Feb 26 2026</td>
+                        <td>7</td>
+                        <td>Thu  Feb 26</td>
                         <td>lecture</td>
                         <td>Interpretability </td>
                         <td>
                         </td>
-                        <td></td>
+                        <td>
+                        </td>
                     </tr>
                     <tr>
                     </tr>
                     <tr>
-                        <td>Tue  Mar  3 2026</td>
+                        <td>8</td>
+                        <td>Tue  Mar  3</td>
                         <td>lecture</td>
                         <td>Spring break 1 - class cancelled </td>
                         <td>
                         </td>
-                        <td></td>
+                        <td>
+                        </td>
                     </tr>
                     <tr>
                     </tr>
                     <tr>
-                        <td>Thu  Mar  5 2026</td>
+                        <td>8</td>
+                        <td>Thu  Mar  5</td>
                         <td>lecture</td>
                         <td>Spring break 2 - class cancelled </td>
                         <td>
                         </td>
-                        <td></td>
+                        <td>
+                        </td>
                     </tr>
                     <tr>
                     </tr>
                     <tr>
-                        <td>Tue  Mar 10 2026</td>
+                        <td>9</td>
+                        <td>Tue  Mar 10</td>
                         <td>lecture</td>
                         <td>Fairness </td>
                         <td>
                         </td>
-                        <td></td>
+                        <td>
+                        </td>
                     </tr>
                     <tr>
                     </tr>
                     <tr>
-                        <td>Thu  Mar 12 2026</td>
+                        <td>9</td>
+                        <td>Thu  Mar 12</td>
                         <td>lecture</td>
                         <td>Safety </td>
                         <td>
                         </td>
-                        <td></td>
+                        <td>
+                        </td>
                     </tr>
                     <tr>
                     </tr>
                     <tr>
-                        <td>Tue  Mar 17 2026</td>
+                        <td>10</td>
+                        <td>Tue  Mar 17</td>
                         <td>lecture</td>
                         <td>Model Compression </td>
                         <td>
                         </td>
-                        <td></td>
+                        <td>
+                        </td>
                     </tr>
                     <tr>
                     </tr>
                     <tr>
-                        <td>Thu  Mar 19 2026</td>
+                        <td>10</td>
+                        <td>Thu  Mar 19</td>
                         <td>lecture</td>
                         <td>Uncertainty and Calibration </td>
                         <td>
                         </td>
-                        <td></td>
+                        <td>
+                        </td>
                     </tr>
                     <tr>
                     </tr>
                     <tr>
-                        <td>Tue  Mar 24 2026</td>
+                        <td>11</td>
+                        <td>Tue  Mar 24</td>
                         <td>lecture</td>
                         <td>Causality </td>
                         <td>
                         </td>
-                        <td></td>
+                        <td>
+                        </td>
                     </tr>
                     <tr>
                     </tr>
                     <tr>
-                        <td>Thu  Mar 26 2026</td>
+                        <td>11</td>
+                        <td>Thu  Mar 26</td>
                         <td>lecture</td>
                         <td>ML and Intervention </td>
                         <td>
                         </td>
-                        <td></td>
+                        <td>
+                        </td>
                     </tr>
                     <tr>
                     </tr>
                     <tr>
-                        <td>Tue  Mar 31 2026</td>
+                        <td>12</td>
+                        <td>Tue  Mar 31</td>
                         <td>lecture</td>
                         <td>Performativity </td>
                         <td>
                         </td>
-                        <td></td>
+                        <td>
+                        </td>
                     </tr>
                     <tr>
                     </tr>
                     <tr>
-                        <td>Thu  Apr  2 2026</td>
+                        <td>12</td>
+                        <td>Thu  Apr  2</td>
                         <td>lecture</td>
                         <td>Project Presentations </td>
                         <td>
                         </td>
-                        <td></td>
+                        <td>
+                        </td>
                     </tr>
                     <tr>
                     </tr>
                     <tr>
-                        <td>Tue  Apr  7 2026</td>
+                        <td>13</td>
+                        <td>Tue  Apr  7</td>
                         <td>lecture</td>
                         <td>Project Presentations </td>
                         <td>
                         </td>
-                        <td></td>
+                        <td>
+                        </td>
                     </tr>
                     <tr>
                     </tr>
                     <tr>
-                        <td>Thu  Apr  9 2026</td>
+                        <td>13</td>
+                        <td>Thu  Apr  9</td>
                         <td>lecture</td>
                         <td>Carnival - class cancelled </td>
                         <td>
                         </td>
-                        <td></td>
+                        <td>
+                        </td>
                     </tr>
                     <tr>
                     </tr>
                     <tr>
-                        <td>Tue  Apr 14 2026</td>
+                        <td>14</td>
+                        <td>Tue  Apr 14</td>
                         <td>lecture</td>
                         <td>TBA </td>
                         <td>
                         </td>
-                        <td></td>
+                        <td>
+                        </td>
                     </tr>
                     <tr>
                     </tr>
                     <tr>
-                        <td>Thu  Apr 16 2026</td>
+                        <td>14</td>
+                        <td>Thu  Apr 16</td>
                         <td>lecture</td>
                         <td>TBA </td>
                         <td>
                         </td>
-                        <td></td>
+                        <td>
+                        </td>
                     </tr>
                     <tr>
                     </tr>
                     <tr>
-                        <td>Tue  Apr 21 2026</td>
+                        <td>15</td>
+                        <td>Tue  Apr 21</td>
                         <td>lecture</td>
                         <td>TBA </td>
                         <td>
                         </td>
-                        <td></td>
+                        <td>
+                        </td>
                     </tr>
                     <tr>
                     </tr>
                     <tr>
-                        <td>Thu  Apr 23 2026</td>
+                        <td>15</td>
+                        <td>Thu  Apr 23</td>
                         <td>lecture</td>
                         <td>TBA </td>
                         <td>
                         </td>
-                        <td></td>
+                        <td>
+                        </td>
                     </tr>
                     <tr>
                     </tr>
